--- a/src/components/CommentList.css
+++ b/src/components/CommentList.css
@@ -1,5 +1,5 @@
 .comment-list {
-    background-color: #fff0da; /* Fundo cinza claro */
+    background-color: #fff0da; 
     border-radius: 8px;
     max-width: 600px;
     margin: 0 auto;
