--- a/src/components/CommentCount.css
+++ b/src/components/CommentCount.css
@@ -1,5 +1,5 @@
 .comment-count {
-    background-color: #fff0da;
+    background-color: red;
     border-radius: 8px;
     max-width: 600px;
     margin: 0 auto;
