--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,4 +1,5 @@
 .paragrafo{
+
     background-color: #ffa500; 
     border-radius: 8px;
     max-width: 600px;
@@ -6,4 +7,14 @@
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: left;
+    margin-bottom:5px;
+    margin-top:5px;
+}
+.total-box { 
+  border-radius: 8px;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: left;
 }
