--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300&family=Roboto:ital,wght@0,300;1,900&display=swap');
+
+
 .header {
   display: flex;
   align-items: center;
@@ -16,29 +20,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-grow: 1; /* Para que o título ocupe o espaço restante na linha */
+  flex-grow: 1;
 }
 
 .title {
   font-size: 24px;
   margin: 0;
+  font-family: 'League Spartan', sans-serif;
 }
 
-.menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-}
 
-.menu li {
-  margin-right: 20px;
-}
-
-.menu a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 16px;
-}
-
-/* Estilize o ícone conforme necessário */
