adding and removing comments

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,4 +1,4 @@
-
+/* importa uma fonte especifica direto do google fonts*/
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300&family=Roboto:ital,wght@0,300;1,900&display=swap');
 
 
